# Offer-Sherlock

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/crawl_results/: Amazon.md  Amazon_软件开发.md  Apple.md  Google.md  LinkedIn.md  Microsoft.md  NVIDIA.md  NVIDIA_Workday.md  OpenAI.md  Uber.md  京东.md  华为.md  拼多多.md  百度.md  腾讯.md  腾讯校招.md
data/mock/: bytedance_page.md  bytedance_positions.md  tencent_page.md  tencent_positions.md
docs/outlines/: gemini_project_plan.md  gemini_reference_projects.md  progress.md  project_plan.md
scripts/: get_xhs_cookie.py  init_targets.py  run_agent.py  run_scheduler.py  test_crawler.py  test_crawler_debug.py  test_crawler_jobs.py  test_crawler_with_js.py  test_crawler_with_llm.py  test_etl_pipeline.py  test_extractors.py  test_llm.py  test_multi_company_crawl.py  test_multi_company_crawl_v2.py  test_multi_company_crawl_v3.py  test_tencent_extraction.py  test_xhs_browser.py  test_xhs_crawler.py  test_xhs_sdk.py
src/offer_sherlock/agents/: __init__.py  intel_agent.py
src/offer_sherlock/crawlers/: __init__.py  base.py  official_crawler.py  social_crawler.py
src/offer_sherlock/database/: __init__.py  models.py  operations.py  session.py
src/offer_sherlock/extractors/: __init__.py  base.py  (+2 more)
tests/: conftest.py
tests/agents/: test_intel_agent.py
tests/crawlers/: __init__.py  test_official_crawler.py
tests/database/: test_models.py  test_operations.py
tests/extractors/: __init__.py  test_insight_extractor.py  test_job_extractor.py
tests/llm/: test_client.py
tests/scheduler/: test_intel_scheduler.py
tests/schemas/: test_insight.py  test_job.py
(+9 files in other folders)
